# etf-grid-design-master

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  clear_cache.py  connection_test.py  direct_test.py  docker-compose.yml  pyproject.toml  requirements.txt  simple_test.py  start.bat  start.sh  test_300676.py  test_300676_solution.py  test_futu_api.py  test_get_etf_data.py  test_security_name.py  test_stock_type.py  tushare_data.md
.github/workflows/: change-log.yml  pre-release.yml  release.yml
.kilocode/rules/: backend.md  frontend.md
.trae/documents/: plan_20260113_114258.md  抓取tushare Etf数据接口文档.md  清除所有数据缓存计划.md
.trae/rules/: project_rules.md
backend/: app.py
backend/algorithms/atr/: __init__.py  analyzer.py  calculator.py
backend/algorithms/grid/: __init__.py  arithmetic_grid.py  (+2 more)
backend/api/: __init__.py  middleware.py  schemas.py
backend/config/: __init__.py  constants.py  settings.py  validation.py  version.py
backend/models/: __init__.py  analysis.py  base.py  etf.py  strategy.py  validators.py
backend/tests/: __init__.py  conftest.py
backend/utils/: __init__.py  decorators.py  exceptions.py  helpers.py  logging_config.py  performance.py
deploy/: .env.production  entrypoint.sh  gunicorn.conf.py
docs/: etf_basic.md  etf_index.md  etf_mins.md  etf_rt_k.md  etf_share_size.md  fund_adj.md  fund_daily.md
frontend/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/scripts/: check-unused-imports.js
frontend/src/: App.css  App.jsx  index.css
scripts/: update_version.sh
(+74 files in other folders)
